# llaisys

./: README.md  test_load.py  xmake.lua
doc/: implementation_report.md
include/llaisys/: ops.h
include/llaisys/models/: qwen2.h
python/: setup.cfg
python/llaisys/: chat_cli.py  chat_server.py  ops.py
python/llaisys/libllaisys/: ops.py
python/llaisys/models/: __init__.py  llama.py  qwen2.py  tensor_parallel.py
src/core/runtime/: runtime.cpp
src/device/nvidia/: cuda_utils.cuh  nvidia_runtime_api.cu
src/llaisys/: ops.cc  qwen2.cc
src/llaisys/models/: qwen2.cc
src/models/qwen2/: qwen2.cpp  qwen2.hpp
src/ops/add/cpu/: add_cpu.cpp
src/ops/add/nvidia/: add_nvidia.cu  add_nvidia.cuh
src/ops/argmax/: op.cpp
src/ops/argmax/cpu/: argmax_cpu.cpp
src/ops/argmax/nvidia/: argmax_nvidia.cu  argmax_nvidia.cuh
src/ops/embedding/: op.cpp
src/ops/embedding/cpu/: embedding_cpu.cpp
src/ops/embedding/nvidia/: embedding_nvidia.cu  embedding_nvidia.cuh
src/ops/linear/: op.cpp
src/ops/linear/cpu/: linear_cpu.cpp
src/ops/linear/nvidia/: linear_nvidia.cu  linear_nvidia.cuh
src/ops/nvidia/: nvidia_common.cuh
src/ops/rearrange/: op.cpp
src/ops/rms_norm/: op.cpp
src/ops/rope/: op.cpp
src/ops/rope/cpu/: rope_cpu.cpp
src/ops/sample/: op.cpp  op.hpp
src/ops/self_attention/: op.cpp
src/ops/swiglu/: op.cpp
src/tensor/: tensor.cpp
test/: chat_test_utils.py  test_chat_api.py  test_chat_cli.py  test_generate_sampling.py  test_model_support.py  test_tensor_parallel.py
test/ops/: rope.py  sample.py  self_attention.py
xmake/: cpu.lua  nvidia.lua
(+18 files in other folders)
