[metadata]
name = llaisys
version = 0.1.0
description = Python APIs for llaisys
author = Pan Zezhong
license = MIT

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    torch>=2.4.0
    transformers
    accelerate

[options.extras_require]
server =
    fastapi
    uvicorn
    httpx

[options.entry_points]
console_scripts =
    llaisys-chat-server = llaisys.chat_server:main
    llaisys-chat-cli = llaisys.chat_cli:main

[options.package_data]
llaisys = 
    libllaisys/*.so
    libllaisys/*.dll
    libllaisys/*.dylib
